--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,18 +19,8 @@ jobs:
           version: 7.11.0
       - name: Install dependencies
         run: pnpm install
-      - name: Run Async tests
-        run: time node async.js
-      - name: Cleanup
-        run: node cleanup.js
-      - name: Run Sync tests
-        run: time node sync.js
-      - name: Cleanup
-        run: node cleanup.js
-      - name: Run optimal tests
-        run: node optimal.js
-      - name: Cleanup
-        run: node cleanup.js
+      - name: Run tests
+        run: node test.js
 
   
   
